all routes and all views nav bar footer content area home details

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,8 +1,12 @@
 $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,400italic,700);
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
-
+@import "base/base.scss";
+@import "layout/layout.scss";
+@import "module/module.scss";
+@import "state/state.scss";
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
@@ -10,9 +14,9 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
   padding: 0.2em 0;
 }
 
-body {
-  padding: 0;
-}
+// body {
+//   padding: 0;
+// }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
