added additional routing for home fields all page content complete social media icons and links added fixed footer design removed stock yeoman css and html ran grunt build

--- a/app/styles/module/module.scss
+++ b/app/styles/module/module.scss
@@ -65,3 +65,20 @@
 .blue {
   background-color: $blue;
 }
+.media-icon {
+  a:link, a:visited, a:hover, a:active {
+    color: white;
+  }
+  i {
+    color: $yellow;
+    &:hover {
+      color: $blue;
+    }
+  }
+}
+.header-media-container {
+  // position: absolute;
+  // right: 0;
+  // bottom: 0;
+  z-index: 1000;
+}
