--- a/app/views/home/home.html
+++ b/app/views/home/home.html
@@ -18,11 +18,12 @@
     </div>
 
   </div> 
+  <br>
   <!-- news section -->
-  <section>
-    <h3>NEWS</h3>
+  <div layout="column">
+    <h3><strong>NEWS</strong></h3>
     <p>
       Semester Two starts on the 27th of July – we hope to see you at our first game on Wednesday the 29th of July at the UNSW Village Green!
     </p>
-  </section>
+  </div>
 </div>
