added materialize css

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,400italic,700);
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
+@import "materialize/sass/materialize.scss";
 // endbower
 @import "base/base.scss";
 @import "layout/layout.scss";
