--- a/app/styles/base/base.scss
+++ b/app/styles/base/base.scss
@@ -4,7 +4,7 @@ body {
   padding: 1% 5%;
   //background-color: silver;
   font-size: 2em;
-  font-family: 'Roboto', sans-serif;
+  //font-family: 'Roboto', sans-serif;
   height: auto;
   background-image: url("/images/background.png")
 }
