--- a/app/views/online-store/online-store.html
+++ b/app/views/online-store/online-store.html
@@ -1,4 +1,4 @@
 <div layout="column">
-  <h3><strong>Calendar</strong></h3>
+  <h3><strong>Online Store</strong></h3>
   <h3>Coming Soon</h3>
 </div>
