refactored to materialize css responsive to mobile screen sizes

--- a/app/views/about-us/executives.html
+++ b/app/views/about-us/executives.html
@@ -1,41 +1,88 @@
-<div layout="column">
-  <h3><strong>Executives</strong></h3>
+  <h4 class="center-align"><strong>Executives</strong></h4>
   <p>
     At the end of each year, a new executive team is elected. Each member of this team is vital in the ongoing success of the Society in providing a safe, comfortable environment for its members to bond over soccer. 
   </p>
-  <p>
-    <strong>President</strong>
-    : Nicholas Lucas
-  </p>
-  <p>
-    <strong>Vice President (Internal)</strong>
-    : Debanjan Acharjee
-    In his role as Vice President (Internal), Debanjan works on ensuring the smooth sailing of the Society and all its events and marketing efforts.
-  </p>
-  <p>
-    <strong>Vice President (External)</strong>
-    : Elena Bonello
-    In her role as Vice President (External), Elena works on liaising with external organisations, such as organising volunteering opportunities for members, as well as providing opportunities for organisations which may have a potential stakehold in the society.
-  </p>
-  <p>
-    <strong>Arc Delegate</strong>
-    : Aaron Choy
-  </p>
-  <p>
-    <strong>Treasurer</strong>
-    : Andrew Ye
-  </p>
-  <p>
-    <strong>Secretary</strong>
-    : Mary Hajiangeli
-  </p>
-  <p>
-    <strong>Marketing Director</strong>
-    : Sophie Clift
-  </p>
-  <p>
-    <strong>Events Director</strong>
-    : Jules Stas
-  </p>
-
-</div>
+  <div class="card-panel grey lighten-5 z-depth-1">
+    <div class="row valign-wrapper">
+      <div class="col s12 m2">
+        <img src="images/executives/IMG_1545.jpg" alt="" class="circle responsive-img">
+      </div>
+      <div class="col s12 m10">
+        <span class="black-text">
+          <strong>Nicholas Lucas <em>(President)</em></strong>
+        </span>
+      </div>
+    </div>
+    <div class="row valign-wrapper">
+      <div class="col s12 m2">
+        <img src="images/executives/IMG_1548.jpg" alt="" class="circle responsive-img">
+      </div>
+      <div class="col s12 m10">
+        <span class="black-text">
+          <strong>Debanjan Acharjee <em>(Vice President, Internal)</em><br></strong>
+          Debanjan works on ensuring the smooth sailing of the Society and all its events and marketing efforts.
+        </span>
+      </div>
+    </div>
+    <div class="row valign-wrapper">
+      <div class="col s12 m2">
+        <img src="images/executives/IMG_1533.jpg" alt="" class="circle responsive-img">
+      </div>
+      <div class="col s12 m10">
+        <span class="black-text">
+          <strong>Elena Bonello <em>(Vice President, External)</em><br></strong>
+          Elena works on liaising with external organisations, such as organising volunteering opportunities for members, as well as providing opportunities for organisations which may have a potential stakehold in the society.
+        </span>
+      </div>
+    </div>
+    <div class="row valign-wrapper">
+      <div class="col s12 m2">
+        <img src="images/executives/IMG_1536.jpg" alt="" class="circle responsive-img">
+      </div>
+      <div class="col s12 m10">
+        <span class="black-text">
+          <strong>Aaron Choy <em>(ARC Delegate)</em><br></strong>
+        </span>
+      </div>
+    </div>
+    <div class="row valign-wrapper">
+      <div class="col s12 m2">
+        <img src="images/executives/IMG_1547.jpg" alt="" class="circle responsive-img">
+      </div>
+      <div class="col s12 m10">
+        <span class="black-text">
+          <strong>Andrew Ye <em>(Treasurer)</em><br></strong>
+        </span>
+      </div>
+    </div>
+    <div class="row valign-wrapper">
+      <div class="col s12 m2">
+        <img src="images/executives/IMG_1541.jpg" alt="" class="circle responsive-img">
+      </div>
+      <div class="col s12 m10">
+        <span class="black-text">
+          <strong>Mary Hajiangeli <em>(Secretary)</em><br></strong>
+        </span>
+      </div>
+    </div>
+    <div class="row valign-wrapper">
+      <div class="col s12 m2">
+        <img src="images/executives/IMG_1553.jpg" alt="" class="circle responsive-img">
+      </div>
+      <div class="col s12 m10">
+        <span class="black-text">
+          <strong>Sophie Clift <em>(Marketing Director)</em><br></strong>
+        </span>
+      </div>
+    </div>
+    <div class="row valign-wrapper">
+      <div class="col s12 m2">
+        <img src="images/executives/IMG_1546.jpg" alt="" class="circle responsive-img">
+      </div>
+      <div class="col s12 m10">
+        <span class="black-text">
+          <strong>Jules Stas <em>(Events Director)</em><br></strong>
+        </span>
+      </div>
+    </div>
+  </div>
