--- a/app/views/about-us/history.html
+++ b/app/views/about-us/history.html
@@ -1,6 +1,4 @@
-<div layout="column">
-  <h3><strong>History</strong></h3>
+  <h4 class="center-align"><strong>History</strong></h4>
   <p>
     [to be provided by George]
   </p>
-</div>
