--- a/app/views/about-us/vision.html
+++ b/app/views/about-us/vision.html
@@ -1,5 +1,4 @@
-<div layout="column">
-  <h3><strong>Vision</strong></h3>
+  <h4 class="center-align"><strong>Vision</strong></h4>
   <p>
     It is our vision to treat our society members as if they are a part of a sporting organisation. We aim to engage these individuals through the common passion of soccer (football) and we invite them to believe in our philosophy and feel a personal attachment to the Society.
   </p>
@@ -9,22 +8,23 @@
   <p>
     We strive to provide a sense of inclusivity to potential stakeholders within and outside the UNSW community through catering to football players of various skill levels and enthusiasm, as well as providing community engagement initiatives for our members. 
     To achieve this vision we work to provide a range of opportunities for our members in the form of:
-    <ul>
-      <li>
-        Bi-weekly casual soccer games
-      </li>
-      <li>
-        Intersociety Competition
-      </li>
-      <li>
-        Indoor Tournaments
-      </li>
-      <li>
-        Volunteering opportunities
-      </li>
-      <li>
-        Social gatherings
-      </li>
-    </ul>
+    <div class="list-reset">
+      <ul>
+        <li>
+          Bi-weekly casual soccer games
+        </li>
+        <li>
+          Intersociety Competition
+        </li>
+        <li>
+          Indoor Tournaments
+        </li>
+        <li>
+          Volunteering opportunities
+        </li>
+        <li>
+          Social gatherings
+        </li>
+      </ul>
+    </div>
   </p>
-</div>
