--- a/app/views/home/home.html
+++ b/app/views/home/home.html
@@ -1,29 +1,15 @@
-<div layout="column">
-  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-      <!-- <li data-target="#carousel-example-generic" data-slide-to="2"></li> -->
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="images/home/1-edited.png">
-      </div>
-      <div class="item">
-        <img src="images/home/2-edited.png">
-      </div>
-    </div>
-
-  </div> 
-  <br>
-  <!-- news section -->
-  <div layout="column">
-    <h3><strong>NEWS</strong></h3>
-    <p>
-      Semester Two starts on the 27th of July – we hope to see you at our first game on Wednesday the 29th of July at the UNSW Village Green!
-    </p>
+  <div class="slider amber" slider>
+    <ul class="slides">
+      <li>
+        <img class="" src="images/home/1.png">
+      </li>
+      <li>
+        <img class="" src="images/home/2.png">
+      </li>
+    </ul>
   </div>
-</div>
+  <!-- news section -->
+  <h4 class="center-align"><strong>NEWS</strong></h4>
+  <p>
+    Semester Two starts on the 27th of July – we hope to see you at our first game on Wednesday the 29th of July at the UNSW Village Green!
+  </p>
