--- a/app/views/online-store/online-store.html
+++ b/app/views/online-store/online-store.html
@@ -1,4 +1,2 @@
-<div layout="column">
-  <h3><strong>Online Store</strong></h3>
-  <h3>Coming Soon</h3>
-</div>
+  <h4 class="center-align"><strong>The Comp</strong></h4>
+  <p>Coming Soon</p>
