--- a/app/styles/base/base.scss
+++ b/app/styles/base/base.scss
@@ -1,19 +1,19 @@
 @import "../variables.scss";
 body {
-  margin: 0;
-  padding: 1% 5%;
-  //background-color: silver;
-  font-size: 2em;
-  //font-family: 'Roboto', sans-serif;
-  height: auto;
-  background-image: url("/images/background.png")
+  // margin: 0;
+  // padding: 1% 5%;
+  font-size: 1.5em;
+  // font-family: 'Roboto', sans-serif;
+  // height: auto;
+  background-image: url("/images/soccer-football-sunset.jpg");
+  background-size: cover;
 }
 section {
   //padding: 0 1%;
 }
-md-whiteframe {
-  background: white;
-  margin: 20px;
-  padding: 20px;
-  min-height: 500px;
-}
+// md-whiteframe {
+//   background: white;
+//   margin: 20px;
+//   padding: 20px;
+//   min-height: 500px;
+// }
