--- a/app/styles/layout/layout.scss
+++ b/app/styles/layout/layout.scss
@@ -1,32 +1,27 @@
 @import "../variables.scss";
-#header {
-  background-color: white;
-  position: relative;
-  max-width: $max-width;
-  //min-width: $min-width;
-  width: 100%;
-}
-#footer {
-  opacity: 0.7;
-  background-color: black;
-  color: white;
-  padding-bottom: 2em;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  max-width: $max-width;
-  //min-width: $min-width;
-  width: 100%;
-}
-#primary-nav {
-  //background-color: yellow;
-  max-width: $max-width;
-  //min-width: $min-width;
-  width: 100%;
-}
-#main-content {
-  background-color: silver;
-  font-size: 1em;
-  max-width: $max-width;
-  //min-width: $min-width;
-  width: 100%;
-}
+// #header {
+//   background-color: white;
+//   position: relative;
+//   max-width: $max-width;
+//   width: 100%;
+// }
+// #footer {
+//   opacity: 0.7;
+//   background-color: black;
+//   color: white;
+//   padding-bottom: 2em;
+//   border-bottom-left-radius: 5px;
+//   border-bottom-right-radius: 5px;
+//   max-width: $max-width;
+//   width: 100%;
+// }
+// #primary-nav {
+//   max-width: $max-width;
+//   width: 100%;
+// }
+// #main-content {
+//   background-color: silver;
+//   font-size: 1em;
+//   max-width: $max-width;
+//   width: 100%;
+// }
