--- a/app/views/about-us/home-fields.html
+++ b/app/views/about-us/home-fields.html
@@ -1,25 +1,75 @@
-<div layout="column" layout-align="start center">
-  <h3><strong>Village Green</strong></h3>
-  <p>
-    The Social Soccer Society runs bi-weekly games on the Village Green, located on UNSW’s Kensington Campus. 
-  </p>
-  <img class="logo" src="/images/home-fields/village-green.png">
-  <br>
-  <a href="https://www.google.com.au/maps/place/UNSW+Village+Green/@-33.9190133,151.2274825,16z/data=!4m2!3m1!1s0x6b12b18bf5b99811:0xb6c110f837836911" target="_blank">
-    <img class="logo logo-map" src="/images/home-fields/village-green-map.png">
-  </a>
-  <h3><strong>ASB</strong></h3>
-  <p>
-    Alumni Park, located behind the Australian School of Business (Map Reference D12), is also used by the Social Soccer Society when the Village Green is closed for maintenance.
-  </p>
-  <a href="https://www.google.com.au/maps/place/UNSW+Australia+Business+School/@-33.9166665,151.2293494,16z/data=!4m2!3m1!1s0x0000000000000000:0x7daebd61dc4a1974" target="_blank">
-    <img class="logo logo-map" src="/images/home-fields/asb-map.png">
-  </a>
-  <h3><strong>David Phillips</strong></h3>
-  <p>
-    Competitive games such as the Intersociety Competition and the UNSW v USYD Derby are held at the David Phillips Sports Field, Daceyville, a short 15 minute walk from UNSW. 
-  </p>
-  <a href="https://www.google.com.au/maps/place/David+Phillips+Memorial+Fields/@-33.9291453,151.2393265,14z/data=!4m2!3m1!1s0x6b12b183c756d6bd:0x173323e871475516" target="_blank">
-    <img class="logo logo-map" src="/images/home-fields/david-phillips-map.png">
-  </a>
-</div>
+  <div class="card">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="images/home-fields/village-green.png">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator black-text">
+        Village Green
+        <i class="material-icons right">location_on</i>
+      </span>
+      <p>
+        The Social Soccer Society runs bi-weekly games on the Village Green, located on UNSW’s Kensington Campus. 
+      </p>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title black-text">
+        Village Green
+        <i class="material-icons right">close</i>
+      </span>
+      <div class="card-image">
+        <a href="https://www.google.com.au/maps/place/UNSW+Village+Green/@-33.9190133,151.2274825,16z/data=!4m2!3m1!1s0x6b12b18bf5b99811:0xb6c110f837836911" target="_blank">
+          <img class="responsive-img" src="/images/home-fields/village-green-map.png">
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="card">
+<!--     <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="images/home-fields/village-green.png">
+    </div>
+ -->    <div class="card-content">
+      <span class="card-title activator black-text">
+        Alumni Park
+        <i class="material-icons right">location_on</i>
+      </span>
+      <p>
+        Alumni Park, located behind the Australian School of Business (Map Reference D12), is also used by the Social Soccer Society when the Village Green is closed for maintenance.
+      </p>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title black-text">
+        Alumni Park
+        <i class="material-icons right">close</i>
+      </span>
+      <div class="card-image">
+        <a href="https://www.google.com.au/maps/place/UNSW+Australia+Business+School/@-33.9166665,151.2293494,16z/data=!4m2!3m1!1s0x0000000000000000:0x7daebd61dc4a1974" target="_blank">
+          <img class="responsive-img" src="/images/home-fields/asb-map.png">
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="card">
+<!--     <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="images/home-fields/village-green.png">
+    </div>
+ -->    <div class="card-content">
+      <span class="card-title activator black-text">
+        David Phillips
+        <i class="material-icons right">location_on</i>
+      </span>
+      <p>
+        Competitive games such as the Intersociety Competition and the UNSW v USYD Derby are held at the David Phillips Sports Field, Daceyville, a short 15 minute walk from UNSW. 
+      </p>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title black-text">
+        David Phillips
+        <i class="material-icons right">close</i>
+      </span>
+      <div class="card-image">
+        <a href="https://www.google.com.au/maps/place/David+Phillips+Memorial+Fields/@-33.9291453,151.2393265,14z/data=!4m2!3m1!1s0x6b12b183c756d6bd:0x173323e871475516" target="_blank">
+          <img class="responsive-img" src="/images/home-fields/david-phillips-map.png">
+        </a>
+      </div>
+    </div>
+  </div>
