--- a/app/views/about-us/home-fields.html
+++ b/app/views/about-us/home-fields.html
@@ -1,6 +1,6 @@
-  <div class="card">
+  <div class="card hoverable">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="images/home-fields/village-green.png">
+      <img class="activator" src="images/home-fields/village-green.jpg">
     </div>
     <div class="card-content">
       <span class="card-title activator black-text">
@@ -23,7 +23,7 @@
       </div>
     </div>
   </div>
-  <div class="card">
+  <div class="card hoverable">
 <!--     <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="images/home-fields/village-green.png">
     </div>
@@ -48,7 +48,7 @@
       </div>
     </div>
   </div>
-  <div class="card">
+  <div class="card hoverable">
 <!--     <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="images/home-fields/village-green.png">
     </div>
