--- a/app/views/about-us/vision.html
+++ b/app/views/about-us/vision.html
@@ -1,5 +1,5 @@
   <h4 class="center-align"><strong>Vision</strong></h4>
-  <p>
+  <!-- <p>
     It is our vision to treat our society members as if they are a part of a sporting organisation. We aim to engage these individuals through the common passion of soccer (football) and we invite them to believe in our philosophy and feel a personal attachment to the Society.
   </p>
   <p>
@@ -27,4 +27,27 @@
         </li>
       </ul>
     </div>
+  </p> -->
+  <p>
+    The initial vision of the society when it was first founded on Monday 21st March 2011 was the following:
+    <div class="list-reset">
+      <ol>
+        <li>
+          To facilitate an organisational structure &amp; easier networking of social soccer games at UNSW
+        </li>
+        <li>
+          To help soccer playing enthusiasts connected to each other
+        </li>
+        <li>
+          To provide cheap/free casual football games for members
+        </li>
+        <li>
+          To provide funding for proper equipment to improve casual soccer playing experience
+        </li>
+        <li>
+          To provide funding for proper organised events.
+        </li>
+      </ol>
+    </div>
+    As subsequent years went by, this vision has changed and adapted to the environment and needs of current members
   </p>
