--- a/app/views/home/home.html
+++ b/app/views/home/home.html
@@ -1,15 +1,19 @@
   <div class="slider amber" slider>
     <ul class="slides">
       <li>
-        <img class="" src="images/home/1.png">
+        <img class="" src="images/home/1-edited.png">
       </li>
       <li>
-        <img class="" src="images/home/2.png">
+        <img class="" src="images/home/2-edited.png">
       </li>
     </ul>
   </div>
   <!-- news section -->
   <h4 class="center-align"><strong>NEWS</strong></h4>
+  <b>Weekly Games</b>
+  <p>
+    The Social Soccer Society runs regular biweekly games on Wednesday and Friday from 2.30 - 4.30 from Weeks 1 - 13 during Semester. These games are run casually with no set positions or official rules, and players are feel to come and go as they please. After these casual games, we head to the Roundhouse to continue socialising.
+  </p>
   <p>
     Semester Two starts on the 27th of July – we hope to see you at our first game on Wednesday the 29th of July at the UNSW Village Green!
   </p>
