--- a/app/styles/base/base.scss
+++ b/app/styles/base/base.scss
@@ -5,15 +5,6 @@ body {
   font-size: 1.5em;
   // font-family: 'Roboto', sans-serif;
   // height: auto;
-  background-image: url("/images/soccer-football-sunset.jpg");
+  background-image: url("/images/background.jpg");
   background-size: cover;
 }
-section {
-  //padding: 0 1%;
-}
-// md-whiteframe {
-//   background: white;
-//   margin: 20px;
-//   padding: 20px;
-//   min-height: 500px;
-// }
