--- a/app/views/about-us/executives.html
+++ b/app/views/about-us/executives.html
@@ -2,87 +2,202 @@
   <p>
     At the end of each year, a new executive team is elected. Each member of this team is vital in the ongoing success of the Society in providing a safe, comfortable environment for its members to bond over soccer. 
   </p>
-  <div class="card-panel grey lighten-5 z-depth-1">
-    <div class="row valign-wrapper">
-      <div class="col s12 m2">
-        <img src="images/executives/IMG_1545.jpg" alt="" class="circle responsive-img">
-      </div>
-      <div class="col s12 m10">
-        <span class="black-text">
-          <strong>Nicholas Lucas <em>(President)</em></strong>
-        </span>
-      </div>
-    </div>
-    <div class="row valign-wrapper">
-      <div class="col s12 m2">
-        <img src="images/executives/IMG_1548.jpg" alt="" class="circle responsive-img">
-      </div>
-      <div class="col s12 m10">
-        <span class="black-text">
-          <strong>Debanjan Acharjee <em>(Vice President, Internal)</em><br></strong>
-          Debanjan works on ensuring the smooth sailing of the Society and all its events and marketing efforts.
-        </span>
+  <div class="card hoverable">
+    <div class="card-content">
+      <div class="row valign-wrapper">
+        <div class="col s12 m2 waves-effect waves-block waves-light">
+          <img src="images/executives/IMG_1545.jpg" class="activator circle responsive-img">
+        </div>
+        <div class="col s12 m10">
+          <span class="card-title activator black-text">
+            Nicholas Lucas <i>(President 2015)</i>
+            <i class="material-icons right">more_vert</i>
+          </span>
+        </div>
       </div>
     </div>
-    <div class="row valign-wrapper">
-      <div class="col s12 m2">
-        <img src="images/executives/IMG_1533.jpg" alt="" class="circle responsive-img">
-      </div>
-      <div class="col s12 m10">
-        <span class="black-text">
-          <strong>Elena Bonello <em>(Vice President, External)</em><br></strong>
-          Elena works on liaising with external organisations, such as organising volunteering opportunities for members, as well as providing opportunities for organisations which may have a potential stakehold in the society.
-        </span>
+    <div class="card-reveal">
+      <span class="card-title black-text">
+        Nicholas Lucas <i>(President)</i>
+        <i class="material-icons right">close</i>
+      </span>
+      <p>
+        He’s El Presidente, he’s Nicholas Lucas! Nicholas is in his second term as President after starting out as the Marketing Director in 2013. Following his passion for playing soccer and following soccer (Arsenal!), he worked his way up in the Society. With years of soccer knowledge under his belt, Nicholas has created a strong vision and strategic goals which gives all our members the opportunity to meet new people and play some soccer!
+      </p>
+    </div>
+  </div>
+
+  <div class="card hoverable">
+    <div class="card-content">
+      <div class="row valign-wrapper">
+        <div class="col s12 m2 waves-effect waves-block waves-light">
+          <img src="images/executives/IMG_1548.jpg" class="activator circle responsive-img">
+        </div>
+        <div class="col s12 m10">
+          <span class="card-title activator black-text">
+            Debanjan Acharjee <i>(Vice President, Internal)</i>
+            <i class="material-icons right">more_vert</i>
+          </span>
+        </div>
       </div>
     </div>
-    <div class="row valign-wrapper">
-      <div class="col s12 m2">
-        <img src="images/executives/IMG_1536.jpg" alt="" class="circle responsive-img">
-      </div>
-      <div class="col s12 m10">
-        <span class="black-text">
-          <strong>Aaron Choy <em>(ARC Delegate)</em><br></strong>
-        </span>
+    <div class="card-reveal">
+      <span class="card-title black-text">
+        Debanjan Acharjee <i>(Vice President, Internal)</i>
+        <i class="material-icons right">close</i>
+      </span>
+      <p>
+        Starting his Social Soccer career in 2012, Debanjan is one of the longest running executive members. Mixing up his Petroleum Engineering degree with his love for playing soccer, refereeing soccer and watching soccer (Arsenal!), he has achieved the perfect balance of work and play. His all-knowing powers, intuition and his comedic value make Debanjan the guy to turn to if you're in a pickle!
+      </p>
+    </div>
+  </div>
+
+  <div class="card hoverable">
+    <div class="card-content">
+      <div class="row valign-wrapper">
+        <div class="col s12 m2 waves-effect waves-block waves-light">
+          <img src="images/executives/IMG_1533.jpg" class="activator circle responsive-img">
+        </div>
+        <div class="col s12 m10">
+          <span class="card-title activator black-text">
+            Elena Bonello <i>(Vice President, External)</i>
+            <i class="material-icons right">more_vert</i>
+          </span>
+        </div>
       </div>
     </div>
-    <div class="row valign-wrapper">
-      <div class="col s12 m2">
-        <img src="images/executives/IMG_1547.jpg" alt="" class="circle responsive-img">
-      </div>
-      <div class="col s12 m10">
-        <span class="black-text">
-          <strong>Andrew Ye <em>(Treasurer)</em><br></strong>
-        </span>
+    <div class="card-reveal">
+      <span class="card-title black-text">
+        Elena Bonello <i>(Vice President, External)</i>
+        <i class="material-icons right">close</i>
+      </span>
+      <p>
+        Elena is the current Vice President External who makes it her goal to get to know everyone in the Social Soccer Society. A regular participant at all our games, Elena works to put the ‘social’ in Social Soccer! If she’s not down at the games, or studying for her Commerce/Media degree, Elena can be found painting sets and props for the UNSW Revues, or organising events for the Disney Society. Elena is a passionate and friendly person - and if you have the chance to get to know her, you won’t be disappointed!
+      </p>
+    </div>
+  </div>
+
+  <div class="card hoverable">
+    <div class="card-content">
+      <div class="row valign-wrapper">
+        <div class="col s12 m2 waves-effect waves-block waves-light">
+          <img src="images/executives/IMG_1536.jpg" class="activator circle responsive-img">
+        </div>
+        <div class="col s12 m10">
+          <span class="card-title activator black-text">
+            Aaron Choy <i>(Arc Delegate)</i>
+            <i class="material-icons right">more_vert</i>
+          </span>
+        </div>
       </div>
     </div>
-    <div class="row valign-wrapper">
-      <div class="col s12 m2">
-        <img src="images/executives/IMG_1541.jpg" alt="" class="circle responsive-img">
-      </div>
-      <div class="col s12 m10">
-        <span class="black-text">
-          <strong>Mary Hajiangeli <em>(Secretary)</em><br></strong>
-        </span>
+    <div class="card-reveal">
+      <span class="card-title black-text">
+        Aaron Choy <i>(Arc Delegate)</i>
+        <i class="material-icons right">close</i>
+      </span>
+      <p>
+        Aaron is our paperwork and rules and regulations guy! A self-confessed over-thinker, Aaron often gets way too into his projects, with hobbies such as drawing, painting and sculpturing in conjunction with his love for soccer. Aaron enjoys playing soccer as a defender, which gives him the opportunity to execute tae-kwon-do moves on the soccer ball without hesitation. It is this reassuring nature of Aaron - that he’s always got your back - that makes him a guy you can count on!
+      </p>
+    </div>
+  </div>
+
+  <div class="card hoverable">
+    <div class="card-content">
+      <div class="row valign-wrapper">
+        <div class="col s12 m2 waves-effect waves-block waves-light">
+          <img src="images/executives/IMG_1541.jpg" class="activator circle responsive-img">
+        </div>
+        <div class="col s12 m10">
+          <span class="card-title activator black-text">
+            Mary Hadjiangeli <i>(Secretary)</i>
+            <i class="material-icons right">more_vert</i>
+          </span>
+        </div>
       </div>
     </div>
-    <div class="row valign-wrapper">
-      <div class="col s12 m2">
-        <img src="images/executives/IMG_1553.jpg" alt="" class="circle responsive-img">
-      </div>
-      <div class="col s12 m10">
-        <span class="black-text">
-          <strong>Sophie Clift <em>(Marketing Director)</em><br></strong>
-        </span>
+    <div class="card-reveal">
+      <span class="card-title black-text">
+        Mary Hadjiangeli <i>(Secretary)</i>
+        <i class="material-icons right">close</i>
+      </span>
+      <p>
+        If we had only three words to describe Mary it would be: energetic, hard-working and smiley! As Secretary of the Society, Mary diligently completes all her secretarial duties including organising meetings and taking minutes, on top of her studies (Civil Engineering) and other society commitments such as CEVSOC. Mary is definitely a busy bee but she always makes time for her family, friends, and of course, the Social Soccer Society!
+      </p>
+    </div>
+  </div>
+
+  <div class="card hoverable">
+    <div class="card-content">
+      <div class="row valign-wrapper">
+        <div class="col s12 m2 waves-effect waves-block waves-light">
+          <img src="images/executives/IMG_1547.jpg" class="activator circle responsive-img">
+        </div>
+        <div class="col s12 m10">
+          <span class="card-title activator black-text">
+            Karunaakara Visaagan Parameswaran <i>(Treasurer)</i>
+            <i class="material-icons right">more_vert</i>
+          </span>
+        </div>
       </div>
     </div>
-    <div class="row valign-wrapper">
-      <div class="col s12 m2">
-        <img src="images/executives/IMG_1546.jpg" alt="" class="circle responsive-img">
+    <div class="card-reveal">
+      <span class="card-title black-text">
+        Karunaakara Visaagan Parameswaran <i>(Treasurer)</i>
+        <i class="material-icons right">close</i>
+      </span>
+      <p>
+        It’s not a Friday afternoon if Visa’s not down at the soccer field working up a sweat! A long time member but short time executive member - Visa is an avid soccer player, and his commitment to games definitely represents his commitment to to life and all that comes at him. Hailing from Malaysia, Visa enjoys travelling around Australia, especially Sydney, when he’s not busy studying Chemical Engineering. So if you’re after a challenge on or off the field, Visa’s the guy to talk to!
+      </p>
+    </div>
+  </div>
+
+  <div class="card hoverable">
+    <div class="card-content">
+      <div class="row valign-wrapper">
+        <div class="col s12 m2 waves-effect waves-block waves-light">
+          <img src="images/executives/IMG_1553.jpg" class="activator circle responsive-img">
+        </div>
+        <div class="col s12 m10">
+          <span class="card-title activator black-text">
+            Sophie Clift <i>(Marketing Director)</i>
+            <i class="material-icons right">more_vert</i>
+          </span>
+        </div>
       </div>
-      <div class="col s12 m10">
-        <span class="black-text">
-          <strong>Jules Stas <em>(Events Director)</em><br></strong>
-        </span>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title black-text">
+        Sophie Clift <i>(Marketing Director)</i>
+        <i class="material-icons right">close</i>
+      </span>
+      <p>
+        With her outgoing personality, drive for action and passion for soccer, Sophie is a pro both on and off the field! When she’s not busy playing or coaching soccer, Sophie is directing her minions on social media platforms to get the best buzz for the Society on platforms such as Facebook and Instagram. Studying International Science, Sophie makes the games at the Village Green definitely worth the drive!
+      </p>
+    </div>
+  </div>
+
+  <div class="card hoverable">
+    <div class="card-content">
+      <div class="row valign-wrapper">
+        <div class="col s12 m2 waves-effect waves-block waves-light">
+          <img src="images/executives/IMG_1546.jpg" class="activator circle responsive-img">
+        </div>
+        <div class="col s12 m10">
+          <span class="card-title activator black-text">
+            Jules Stas <i>(Events Director)</i>
+            <i class="material-icons right">more_vert</i>
+          </span>
+        </div>
       </div>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title black-text">
+        Jules Stas <i>(Events Director)</i>
+        <i class="material-icons right">close</i>
+      </span>
+      <p>
+        Jules is one of the most vital members of the executive team. Not only does he make sure our bi-weekly games run without a hitch, he’s also the main organiser of the Intersociety Competition. Balancing a Commerce/Science degree with a range of extracurricular activities including YSA and the Disney Society, Jules always makes time for the needs of others! His fantastic organisation and time skills are what makes him one of the most diligent and hard-working members of the executive team.
+      </p>
     </div>
   </div>
