--- a/app/views/online-store/online-store.html
+++ b/app/views/online-store/online-store.html
@@ -1,2 +1,4 @@
   <h4 class="center-align"><strong>The Comp</strong></h4>
-  <p>Coming Soon</p>
+  <p>
+    The Social Soccer Societies very own Premier League. Held with in conjunction a number of other societies throughout the university and beyond, The Comp looks to provide our members with round robin competition held over a number of weeks, without the added commitment of weekly training sessions that you would normally face. The Comp is a great way not only to play football, but also provides a platform for students to overcome uni timetabling barriers and make new friends.
+  </p>
